--- a/Develop/index.html
+++ b/Develop/index.html
@@ -14,7 +14,12 @@
       </header>
       <div class="card">
         <div class="card-header">
+          <div class="header1">
           <h2>Generate a Password</h2>
+          </div>
+          <div class="header2">
+          <a href="#" class="copyButton" id="copyButton">Copy Password</a>
+        </div>
         </div>
         <div class="card-body">
           <textarea
